--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Verify Your Account hello</h2>
+        <h2>Verify Account </h2>
         <p>" We emailed you the six digit code to personal@email.com "
             <br>
             " Enter the code below to confirm your email address "
